<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WLTwitter_Part1</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- MENU -->
    <string name="action_logout">Logout</string>
    <string name="action_dropTable">DropTable</string>

    <!-- LOGIN -->
    <string name="loginHint">Your Twitter login</string>
    <string name="passwordHint">Your Twitter password</string>
    <string name="login">Sign in</string>
    <string name="error_no_login">Empty login !</string>
    <string name="error_no_password">Empty password !</string>
    <string name="action_settings">Title!</string>

    <!-- TWEET LIST ITEM -->
    <string name="tweet_list_item_button_text">RT</string>

    <!-- TWEET -->
    <string name="tweet_reply">reply</string>
    <string name="tweet_retweet">retweet</string>
    <string name="tweet_star">star</string>

    <!-- NOTIFICATION -->
    <string name="notification_content">%1$d new Tweet !!</string>

</resources>
